app/src/assets/fb.css
:root {
	--nav-bar-height: 40px;
	--nav-bar-padding: 3px;
}

body {
	overflow: hidden !important;
}

.liquid div#globalContainer {
	min-width: 0 !important;
}

/* Workplace toolbar */
#pagelet_bluebar, #fb2k_pagelet_bluebar {
	display: none;
}

/* "Get App"-banner */
._s15 {
	display: none !important;
}

/* container */
._4sp8._li {
	width: 100vw;
}

/* left column */
._1enh {

}
	/* left column navbar */
	._1enh ._36ic._5l-3 {
		height: var(--nav-bar-height);
		padding: var(--nav-bar-padding);
		display: flex;
		justify-content: flex-end;
	}

		/* "Work Chat" title */
		._1enh ._36ic._5l-3 ._1tqi {
			display: none;
		}

		/* preferences icon / back button */
		._1enh ._36ic._5l-3 a:nth-child(1) {
			visibility: hidden;
		}

		/* New message button */
		@media (max-width: 700px) {
			._1enh ._36ic._5l-3 ._30yy._2oc8 {
				position: relative;
				left: 44px;
			}
		}
		@media (max-width: 500px) {
			._1enh ._36ic._5l-3 ._30yy._2oc8 {
				display: none;
			}
		}

/* right column */
._1t2u {

}
	/* right column navbar: new conversation */
	._1t2u ._2y8y._5l-3 {
		min-height: var(--nav-bar-height) !important;
		padding: 8px !important;
	}
	/* right column navbar */
	._1t2u ._673w._1_fz {
		height: var(--nav-bar-height);
		padding: var(--nav-bar-padding);
	}

		/* conversation action icons (call, info, ...) */
		._1t2u ._673w._1_fz ._fl2 {
			padding: 4px 8px;
		}

			/* Call, video call button */
			._1t2u ._673w._1_fz ._fl2 ._30yy:not([data-testid="info_panel_button"]) {
				display: none;
			}

